<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BusActivity"
    tools:showIn="@layout/activity_bus">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:paddingTop="100dp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            android:id="@+id/lblUsername" />
        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtUsername" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password"
            android:id="@+id/lblPassword" />
        <EditText
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword" />

    </android.support.v7.widget.LinearLayoutCompat>





    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
